--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,7 @@
 [Driver]
 chrome=D:\driver\chromedriver_win32\chromedriver.exe
+
+[Credential]
+link=http://192.168.0.199:9091/QuaLISWeb/#/login
+loginid=cdolman
+password=123
