--- a/ObjectRepository/ElementBaseMaster.ini
+++ b/ObjectRepository/ElementBaseMaster.ini
@@ -38,3 +38,7 @@ unitDefaultStatusList=//tbody[@role='presentation']/tr/td[3]
 UnitEditList=//tbody[@role='presentation']/tr/td[4]/a/span[1]
 
 unitDeleteList=//tbody[@role='presentation']/tr/td[4]/a/span[2]
+
+UnitDeleteConfirmationOK=//button[text()='OK']
+
+UnitDeleteConfirmationCancel=//button[text()='Cancel']
